Made MatchControl immutable